@@ -1,3 +1,10 @@
+Wed Apr 21 00:26:17 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* compile.c (NODE_NEXT, NODE_REDO): add dummy putnil instruction to
+	  fix stack consistency error.  [ruby-core:28172]
+
+	* bootstraptest/test_jump.rb: add a test for above.
+
 Wed Apr 21 00:16:44 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/zlib/zlib.c (rb_deflate_params): update buf_filled count because
